--- a/blocks/tracking-systems/__description-container/tracking-systems__description-container.css
+++ b/blocks/tracking-systems/__description-container/tracking-systems__description-container.css
@@ -2,5 +2,5 @@
     width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 30px;
+    gap: 70px;
 }
