--- a/blocks/tracking-systems/__description/tracking-systems__description.css
+++ b/blocks/tracking-systems/__description/tracking-systems__description.css
@@ -1,5 +1,5 @@
 .tracking-systems__description {
-    padding:0;
-    margin: 80px 0 0 240px;
+    padding: 0 0 0 30px;
+    margin: 80px 0 0 auto;
     max-width: 670px;
 }
